parser.output
Grammar

    0 $accept: Start $end

    1 Start: ClassList Class

    2 ClassList: ClassList Class
    3          | %empty

    4 Class: ClassName t_extends ClassName '{' DeclarationList MethodList '}'
    5      | ClassName '{' DeclarationList MethodList '}'
    6      | ClassName t_extends ClassName '{' DeclarationList '}'
    7      | ClassName '{' DeclarationList '}'
    8      | ClassName t_extends ClassName '{' MethodList '}'
    9      | ClassName '{' MethodList '}'
   10      | ClassName t_extends ClassName '{' '}'
   11      | ClassName '{' '}'

   12 DeclarationList: DeclarationList Type MemberName MemberNames ';'
   13                | Type MemberName MemberNames ';'

   14 MethodList: MethodList MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   15           | MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   16           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   17           | MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   18           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   19           | MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   20           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   21           | MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   22           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   23           | MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   24           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   25           | MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   26           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   27           | MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   28           | MethodList MethodName '(' Parameters ')' t_arrow Type '{' '}'
   29           | MethodName '(' Parameters ')' t_arrow Type '{' '}'

   30 MemberNames: ',' first_id MemberNames
   31            | %empty

   32 NesMethodName: first_id '.' first_id
   33              | first_id t_arrow first_id

   34 Parameters: Parameter ParametersRest
   35           | %empty

   36 ParametersRest: ',' Parameter ParametersRest
   37               | %empty

   38 Parameter: Type first_id

   39 Type: t_int_type
   40     | t_bool_type
   41     | t_none_type
   42     | first_id

   43 MethodBodyList: MethodBodyList Statement
   44               | Statement

   45 MethodBodyReturn: t_return Expression ';'

   46 Statement: first_id '=' Expression ';'
   47          | first_id '.' first_id '=' Expression ';'
   48          | first_id t_arrow first_id '=' Expression ';'
   49          | MethodCall ';'
   50          | t_if Expression '{' Statement Block '}'
   51          | t_if Expression '{' Statement Block '}' t_else '{' Statement Block '}'
   52          | t_while Expression '{' Statement Block '}'
   53          | t_do '{' Statement Block '}' t_while '(' Expression ')' ';'
   54          | t_print Expression ';'

   55 MethodCallInputs: MethodCallInput MethodCallInputsRest
   56                 | %empty

   57 MethodCallInputsRest: ',' MethodCallInput MethodCallInputsRest
   58                     | %empty

   59 MethodCallInput: Expression

   60 Block: Statement Block
   61      | %empty

   62 Expression: Expression '+' Expression
   63           | Expression '-' Expression
   64           | Expression '*' Expression
   65           | Expression '/' Expression
   66           | Expression '>' Expression
   67           | Expression t_geq Expression
   68           | Expression t_equals Expression
   69           | Expression t_and Expression
   70           | Expression t_or Expression
   71           | t_not Expression
   72           | '-' Expression
   73           | first_id
   74           | first_id '.' first_id
   75           | first_id t_arrow first_id
   76           | MethodCall
   77           | '(' Expression ')'
   78           | t_number
   79           | t_true
   80           | t_false
   81           | t_new ClassName
   82           | t_new ClassName '(' MethodCallInputs ')'

   83 MethodCall: MethodName '(' MethodCallInputs ')'
   84           | NesMethodName '(' MethodCallInputs ')'

   85 ClassName: first_id

   86 MemberName: first_id

   87 MethodName: first_id

   88 first_id: t_id


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 53 77 82 83 84
    ')' (41) 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 53 77 82 83 84
    '*' (42) 64
    '+' (43) 62
    ',' (44) 30 36 57
    '-' (45) 63 72
    '.' (46) 32 47 74
    '/' (47) 65
    ';' (59) 12 13 45 46 47 48 49 53 54
    '=' (61) 46 47 48
    '>' (62) 66
    '{' (123) 4 5 6 7 8 9 10 11 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 50 51 52 53
    '}' (125) 4 5 6 7 8 9 10 11 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 50 51 52 53
    error (256)
    t_print (258) 54
    t_return (259) 45
    t_if (260) 50 51
    t_else (261) 51
    t_while (262) 52 53
    t_new (263) 81 82
    t_equals (264) 68
    t_and (265) 69
    t_or (266) 70
    t_not (267) 71
    t_extends (268) 4 6 8 10
    t_do (269) 53
    t_true (270) 79
    t_false (271) 80
    t_arrow (272) 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 33 48 75
    t_geq (273) 67
    unary_minus (274)
    t_id (275) 88
    t_int_type (276) 39
    t_bool_type (277) 40
    t_none_type (278) 41
    t_number <integerliteral_ptr> (279) 78


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    Start <program_ptr> (39)
        on left: 1
        on right: 0
    ClassList <class_list_ptr> (40)
        on left: 2 3
        on right: 1 2
    Class <class_ptr> (41)
        on left: 4 5 6 7 8 9 10 11
        on right: 1 2
    DeclarationList <declaration_list_ptr> (42)
        on left: 12 13
        on right: 4 5 6 7 12 14 15 18 19 20 21 22 23
    MethodList <method_list_ptr> (43)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 4 5 8 9 14 16 18 20 22 24 26 28
    MemberNames <identifier_list_ptr> (44)
        on left: 30 31
        on right: 12 13 30
    NesMethodName <identifier_list_ptr> (45)
        on left: 32 33
        on right: 84
    Parameters <parameter_list_ptr> (46)
        on left: 34 35
        on right: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    ParametersRest <parameter_list_ptr> (47)
        on left: 36 37
        on right: 34 36
    Parameter <parameter_ptr> (48)
        on left: 38
        on right: 34 36
    Type <type_ptr> (49)
        on left: 39 40 41 42
        on right: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 38
    MethodBodyList <statement_list_ptr> (50)
        on left: 43 44
        on right: 14 15 16 17 20 21 24 25 43
    MethodBodyReturn <returnstatement_ptr> (51)
        on left: 45
        on right: 14 15 16 17 18 19 26 27
    Statement <statement_ptr> (52)
        on left: 46 47 48 49 50 51 52 53 54
        on right: 43 44 50 51 52 53 60
    MethodCallInputs <expression_list_ptr> (53)
        on left: 55 56
        on right: 82 83 84
    MethodCallInputsRest <expression_list_ptr> (54)
        on left: 57 58
        on right: 55 57
    MethodCallInput <expression_ptr> (55)
        on left: 59
        on right: 55 57
    Block <statement_list_ptr> (56)
        on left: 60 61
        on right: 50 51 52 53 60
    Expression <expression_ptr> (57)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
        on right: 45 46 47 48 50 51 52 53 54 59 62 63 64 65 66 67 68 69 70 71 72 77
    MethodCall <methodcall_ptr> (58)
        on left: 83 84
        on right: 49 76
    ClassName <identifier_ptr> (59)
        on left: 85
        on right: 4 5 6 7 8 9 10 11 81 82
    MemberName <identifier_ptr> (60)
        on left: 86
        on right: 12 13
    MethodName <identifier_ptr> (61)
        on left: 87
        on right: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 83
    first_id <identifier_ptr> (62)
        on left: 88
        on right: 30 32 33 38 42 46 47 48 73 74 75 85 86 87


State 0

    0 $accept: • Start $end

    $default  reduce using rule 3 (ClassList)

    Start      go to state 1
    ClassList  go to state 2


State 1

    0 $accept: Start • $end

    $end  shift, and go to state 3


State 2

    1 Start: ClassList • Class
    2 ClassList: ClassList • Class

    t_id  shift, and go to state 4

    Class      go to state 5
    ClassName  go to state 6
    first_id   go to state 7


State 3

    0 $accept: Start $end •

    $default  accept


State 4

   88 first_id: t_id •

    $default  reduce using rule 88 (first_id)


State 5

    1 Start: ClassList Class •
    2 ClassList: ClassList Class •

    t_id      reduce using rule 2 (ClassList)
    $default  reduce using rule 1 (Start)


State 6

    4 Class: ClassName • t_extends ClassName '{' DeclarationList MethodList '}'
    5      | ClassName • '{' DeclarationList MethodList '}'
    6      | ClassName • t_extends ClassName '{' DeclarationList '}'
    7      | ClassName • '{' DeclarationList '}'
    8      | ClassName • t_extends ClassName '{' MethodList '}'
    9      | ClassName • '{' MethodList '}'
   10      | ClassName • t_extends ClassName '{' '}'
   11      | ClassName • '{' '}'

    t_extends  shift, and go to state 8
    '{'        shift, and go to state 9


State 7

   85 ClassName: first_id •

    $default  reduce using rule 85 (ClassName)


State 8

    4 Class: ClassName t_extends • ClassName '{' DeclarationList MethodList '}'
    6      | ClassName t_extends • ClassName '{' DeclarationList '}'
    8      | ClassName t_extends • ClassName '{' MethodList '}'
   10      | ClassName t_extends • ClassName '{' '}'

    t_id  shift, and go to state 4

    ClassName  go to state 10
    first_id   go to state 7


State 9

    5 Class: ClassName '{' • DeclarationList MethodList '}'
    7      | ClassName '{' • DeclarationList '}'
    9      | ClassName '{' • MethodList '}'
   11      | ClassName '{' • '}'

    '}'          shift, and go to state 11
    t_id         shift, and go to state 4
    t_int_type   shift, and go to state 12
    t_bool_type  shift, and go to state 13
    t_none_type  shift, and go to state 14

    DeclarationList  go to state 15
    MethodList       go to state 16
    Type             go to state 17
    MethodName       go to state 18
    first_id         go to state 19


State 10

    4 Class: ClassName t_extends ClassName • '{' DeclarationList MethodList '}'
    6      | ClassName t_extends ClassName • '{' DeclarationList '}'
    8      | ClassName t_extends ClassName • '{' MethodList '}'
   10      | ClassName t_extends ClassName • '{' '}'

    '{'  shift, and go to state 20


State 11

   11 Class: ClassName '{' '}' •

    $default  reduce using rule 11 (Class)


State 12

   39 Type: t_int_type •

    $default  reduce using rule 39 (Type)


State 13

   40 Type: t_bool_type •

    $default  reduce using rule 40 (Type)


State 14

   41 Type: t_none_type •

    $default  reduce using rule 41 (Type)


State 15

    5 Class: ClassName '{' DeclarationList • MethodList '}'
    7      | ClassName '{' DeclarationList • '}'
   12 DeclarationList: DeclarationList • Type MemberName MemberNames ';'

    '}'          shift, and go to state 21
    t_id         shift, and go to state 4
    t_int_type   shift, and go to state 12
    t_bool_type  shift, and go to state 13
    t_none_type  shift, and go to state 14

    MethodList  go to state 22
    Type        go to state 23
    MethodName  go to state 18
    first_id    go to state 19


State 16

    9 Class: ClassName '{' MethodList • '}'
   14 MethodList: MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   16           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   18           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   20           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   22           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   24           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   26           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   28           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' '}'

    '}'   shift, and go to state 24
    t_id  shift, and go to state 4

    MethodName  go to state 25
    first_id    go to state 26


State 17

   13 DeclarationList: Type • MemberName MemberNames ';'

    t_id  shift, and go to state 4

    MemberName  go to state 27
    first_id    go to state 28


State 18

   15 MethodList: MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   17           | MethodName • '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   19           | MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   21           | MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   23           | MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   25           | MethodName • '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   27           | MethodName • '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   29           | MethodName • '(' Parameters ')' t_arrow Type '{' '}'

    '('  shift, and go to state 29


State 19

   42 Type: first_id •
   87 MethodName: first_id •

    '('       reduce using rule 87 (MethodName)
    $default  reduce using rule 42 (Type)


State 20

    4 Class: ClassName t_extends ClassName '{' • DeclarationList MethodList '}'
    6      | ClassName t_extends ClassName '{' • DeclarationList '}'
    8      | ClassName t_extends ClassName '{' • MethodList '}'
   10      | ClassName t_extends ClassName '{' • '}'

    '}'          shift, and go to state 30
    t_id         shift, and go to state 4
    t_int_type   shift, and go to state 12
    t_bool_type  shift, and go to state 13
    t_none_type  shift, and go to state 14

    DeclarationList  go to state 31
    MethodList       go to state 32
    Type             go to state 17
    MethodName       go to state 18
    first_id         go to state 19


State 21

    7 Class: ClassName '{' DeclarationList '}' •

    $default  reduce using rule 7 (Class)


State 22

    5 Class: ClassName '{' DeclarationList MethodList • '}'
   14 MethodList: MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   16           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   18           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   20           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   22           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   24           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   26           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   28           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' '}'

    '}'   shift, and go to state 33
    t_id  shift, and go to state 4

    MethodName  go to state 25
    first_id    go to state 26


State 23

   12 DeclarationList: DeclarationList Type • MemberName MemberNames ';'

    t_id  shift, and go to state 4

    MemberName  go to state 34
    first_id    go to state 28


State 24

    9 Class: ClassName '{' MethodList '}' •

    $default  reduce using rule 9 (Class)


State 25

   14 MethodList: MethodList MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   16           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   18           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   20           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   22           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   24           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   26           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   28           | MethodList MethodName • '(' Parameters ')' t_arrow Type '{' '}'

    '('  shift, and go to state 35


State 26

   87 MethodName: first_id •

    $default  reduce using rule 87 (MethodName)


State 27

   13 DeclarationList: Type MemberName • MemberNames ';'

    ','  shift, and go to state 36

    $default  reduce using rule 31 (MemberNames)

    MemberNames  go to state 37


State 28

   86 MemberName: first_id •

    $default  reduce using rule 86 (MemberName)


State 29

   15 MethodList: MethodName '(' • Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   17           | MethodName '(' • Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   19           | MethodName '(' • Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   21           | MethodName '(' • Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   23           | MethodName '(' • Parameters ')' t_arrow Type '{' DeclarationList '}'
   25           | MethodName '(' • Parameters ')' t_arrow Type '{' MethodBodyList '}'
   27           | MethodName '(' • Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   29           | MethodName '(' • Parameters ')' t_arrow Type '{' '}'

    t_id         shift, and go to state 4
    t_int_type   shift, and go to state 12
    t_bool_type  shift, and go to state 13
    t_none_type  shift, and go to state 14

    $default  reduce using rule 35 (Parameters)

    Parameters  go to state 38
    Parameter   go to state 39
    Type        go to state 40
    first_id    go to state 41


State 30

   10 Class: ClassName t_extends ClassName '{' '}' •

    $default  reduce using rule 10 (Class)


State 31

    4 Class: ClassName t_extends ClassName '{' DeclarationList • MethodList '}'
    6      | ClassName t_extends ClassName '{' DeclarationList • '}'
   12 DeclarationList: DeclarationList • Type MemberName MemberNames ';'

    '}'          shift, and go to state 42
    t_id         shift, and go to state 4
    t_int_type   shift, and go to state 12
    t_bool_type  shift, and go to state 13
    t_none_type  shift, and go to state 14

    MethodList  go to state 43
    Type        go to state 23
    MethodName  go to state 18
    first_id    go to state 19


State 32

    8 Class: ClassName t_extends ClassName '{' MethodList • '}'
   14 MethodList: MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList MethodBodyReturn '}'
   16           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList MethodBodyReturn '}'
   18           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyReturn '}'
   20           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList MethodBodyList '}'
   22           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' DeclarationList '}'
   24           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyList '}'
   26           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' MethodBodyReturn '}'
   28           | MethodList • MethodName '(' Parameters ')' t_arrow Type '{' '}'

    '}'   shift, and go to state 44
    t_id  shift, and go to state 4

    MethodName  go to state 25
    first_id    go to state 26


State 33

    5 Class: ClassName '{' DeclarationList MethodList '}' •

    $default  reduce using rule 5 (Class)


State 34

   12 DeclarationList: DeclarationList Type MemberName • MemberNames ';'

    ','  shift, and go to state 36
